<resources>
    <string name="app_name">Notely</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_filter">Filter</string>
    <string name="title_activity_note_view">Notely</string>
    <string name="title_activity_home">Notely</string>
    <string name="nav_text_filter">FILTER</string>
    <string name="nav_text_hearted">Hearted</string>
    <string name="nav_text_favorite">Favorite</string>
    <string name="nav_text_poems">Poems</string>
    <string name="nav_text_story">Story</string>
    <string name="action_apply_filter">APPLY</string>
    <string name="hint_add_title">Add a Title</string>
    <string name="hint_add_description">Write note description</string>
    <string name="action_save">Save</string>
    <string name="action_undo">Undo</string>
    <string name="action_edit">Edit</string>
    <string name="error_title">Note Title is missing.</string>
    <string name="error_description">Note Description is missing.</string>
    <string name="empty_title_desc">Empty title or description.</string>
</resources>
